# rust-web-scraper

./: .gitignore  Cargo.toml  justfile  readme.md  redesign_api.md
examples/: quick_dev.rs  quick_dev_old.rs
sql/: 01-setup.surql
src/: main.rs  main_old.rs
src/get_db/: mod.rs
src/scraper/: error.rs  make_request.rs  mod.rs  url.rs
src/scraper/pages/: mod.rs
src/scraper/pages/bbc/: mod.rs
src/scraper/pages/wikipedia/: error.rs  mod.rs
src/scraper_v2/: error.rs  mod.rs
src/scraper_v2/common/: content.rs  make_request.rs  mod.rs  page.rs  scraper.rs  url.rs
src/scraper_v2/sites/: error.rs  mod.rs
src/scraper_v2/sites/bbc/: error.rs  mod.rs  page.rs  url.rs
src/scraper_v2/sites/wikipedia/: error.rs  mod.rs  page.rs  url.rs
