[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_crate"
path = "src/main.rs"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[lints]
workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version ="0.12", features = ["blocking"]}
scraper = "0.19"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99"
surrealdb ="1.4"
anyhow = "1"
futures = "0.3"
lazy_static = "1.4"
itertools = "0.12"
lazy-regex = "3.1"